SMO changes, course banner issues, register form spacing issues, short-term-course one ticket,

--- a/app/assets/styles/modules/_login.scss
+++ b/app/assets/styles/modules/_login.scss
@@ -60,7 +60,7 @@
 		margin: 30px 0;
 		label {display: block; color:red; clear:both;}
 		.login-item {
-			margin: 10px 0;
+			margin: 7px 0;
 			p {
 				font-family: Lato;
 			    font-size: 16px;
@@ -70,7 +70,7 @@
 			    line-height: normal;
 			    letter-spacing: normal;
 			    color: #303030;
-			    margin: 0 0 12px 0;
+			    margin: 0 0 7px 0;
 			}
 			input, select {
 				height: 50px;
@@ -80,7 +80,7 @@
 			    background-color: #ffffff;
 			    width: 450px;
 			    padding: 10px;
-			    margin: 4px 0 20px 0;
+			    margin: 4px 0 10px 0;
 			    font-family: Lato;
 			    font-size: 16px;
 			    font-weight: 500;
